--- a/css/styles.css
+++ b/css/styles.css
@@ -12,9 +12,11 @@ body {
 }
 
 .topButtons {
-  width: 100%;
   background: white;
-  padding-left: 20px;
+  width: 100%;
+  height: 80px;
+  clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 100% 50%, 40% 50%, 30% 100%);
+  padding: 20px;
 }
 
 .bigBlueButtonBorder {
