--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {
   margin: 20px 0 50px 0;
 } */
 
-.topButtons {
+.topContainer {
   background: white;
   width: 100%;
   height: 70px;
@@ -206,13 +206,14 @@ body {
   height: 30%;
   margin: 0 auto;
   padding: 30px;
+  margin-bottom: 55px;
 }
 
 .pokedexScreenBorder {
   background: #dedede;
   height: 100%;
   border-radius: 10px 10px 10px 50px;
-  padding: 35px;
+  padding: 40px 30px;
   border: 2px solid black;
 }
 
@@ -223,7 +224,7 @@ body {
   height: 7px;
   border: solid 2px black;
   display: inline-block;
-  margin-top: -20px;
+  margin-top: -25px;
   margin-left: 9%;
   position: absolute;
 }
@@ -235,7 +236,7 @@ body {
   height: 7px;
   border: solid 2px black;
   display: inline-block;
-  margin-top: -20px;
+  margin-top: -25px;
   margin-left: 11%;
   position: absolute;
 }
@@ -247,7 +248,7 @@ body {
   height: 15px;
   border: solid 2px black;
   display: inline-block;
-  margin-top: 5px;
+  margin-top: 8px;
   position: absolute;
 }
 
@@ -256,4 +257,87 @@ body {
   border-radius: 5%;
   height: 100%;
   border: 2px solid black;
+}
+
+.pokedexScreenSpeaker {
+  width: 15%;
+  margin-top: 8px;
+  margin-left: 85%;
+}
+
+.pokedexScreenLines {
+  background: black;
+  width: 100%;
+  height: 2px;
+  margin-bottom: 4px;
+  border-radius: 40%;
+}
+
+.bottomContainer {
+  width: 85%;
+  padding: 15px 30px;
+  height: 22%;
+}
+
+.blackButton {
+  width: 40px;
+  height: 40px;
+  background: radial-gradient(circle at 0px 0px, #00312b, #000);
+  border-radius: 50%;
+  position: relative;
+  z-index: 0;
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.blackButton:before {
+  content: "";
+  position: absolute;
+  background: radial-gradient(circle at 22px 29px, #00312b, #00312b 50%);
+  border-radius: 50%;
+  opacity: 0.6;
+  height: 35px;
+  width: 34px;
+  margin-left: 1px;
+  margin-top: 1px;
+}
+
+.redButton {
+  width: 11%;
+  height: 5px;
+  background: #f30029;
+  border-radius: 34%;
+  border: 2px solid black;
+  /* margin-left: 16%; */
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 20px;
+}
+
+.blueButton {
+  width: 11%;
+  height: 5px;
+  background: #0d5075;
+  border-radius: 34%;
+  border: 2px solid black;
+  /* margin-left: 18%; */
+  display: inline-block;
+  vertical-align: top;
+}
+
+.greenScreen {
+  width: 28%;
+  height: 60px;
+  background: #51ae5f;
+  border: 2px solid black;
+  border-radius: 10%;
+  margin-left: 16%;
+  margin-top: -15px;
+}
+
+.dPad {
+  width: 20%;
+  height: 100px;
+  float: right;
+  background: white;
 }
