--- a/css/styles.css
+++ b/css/styles.css
@@ -303,7 +303,7 @@ body {
 }
 
 .redButton {
-  width: 11%;
+  width: 13%;
   height: 5px;
   background: #f30029;
   border-radius: 34%;
@@ -315,7 +315,7 @@ body {
 }
 
 .blueButton {
-  width: 11%;
+  width: 13%;
   height: 5px;
   background: #0d5075;
   border-radius: 34%;
@@ -326,18 +326,44 @@ body {
 }
 
 .greenScreen {
-  width: 28%;
-  height: 60px;
+  width: 34%;
+  height: 70px;
   background: #51ae5f;
   border: 2px solid black;
   border-radius: 10%;
-  margin-left: 16%;
+  margin-left: 19%;
   margin-top: -15px;
 }
 
 .dPad {
-  width: 20%;
+  width: 100px;
   height: 100px;
   float: right;
-  background: white;
+  margin-top: -95px;
+}
+
+.dPadUp {
+  margin: 0 auto;
+  background: #00312b;
+  height: 33px;
+  width: 33px;
+  border-radius: 20% 20% 0 0;
+  box-shadow: 3px 2px 1px black;
+  }
+
+.dPadMiddle {
+  background: #00312b;
+  height: 33px;
+  width: 100%;
+  border-radius: 10%;
+  box-shadow: 3px 4px 1px black;
+}
+
+.dPadDown {
+  margin: 0 auto;
+  background: #00312b;
+  height: 33px;
+  width: 33px;
+  border-radius: 0 0 20% 20%;
+  box-shadow: 3px 3px 1px black;
 }
