--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,21 @@ button {
   margin: 20px 0 50px 0;
 } */
 
+.circle {
+  border-radius: 100%;
+}
+
+.darkInset {
+  -moz-box-shadow: inset 0 0 15px #aaaaaa;
+  -webkit-box-shadow: inset 0 0 15px #aaaaaa;
+  box-shadow: inset 0 0 15px #aaaaaa;
+}
+
+.blackBorder {
+  border: 2px solid black;
+}
+
 .topContainer {
-  background: #dc0a2d;
   width: 100%;
   height: 70px;
   clip-path: polygon(0% 100%, 0% 0%, 100% 0%, 100% 50%, 45% 50%, 35% 100%);
@@ -61,40 +74,36 @@ button {
 
 .blueLightBorder {
   background: white;
-  border-radius: 50%;
   width: 60px;
   height: 60px;
-  border: solid 2px black;
   padding: 5px;
   display: inline-block;
 }
 
-.blueLightCircle {
+.blueLight {
   background: radial-gradient(circle at 0px 0px, #28aafd, #196a9e);
-  border-radius: 50%;
   width: 60px;
   height: 60px;
   margin: 0 auto;
 }
 
-.blueLightCircle:before {
-    content: "";
-    position: absolute;
-    background: radial-gradient(circle at 0px 0px, rgba(255, 255, 255, 0.5), #a1dafe 70%);
-    border-radius: 50%;
-    opacity: 0.6;
-    height: 50px;
-    width: 50px;
-    -webkit-filter: blur(5px);
-    z-index: 2;
+.blueLight:before {
+  content: "";
+  position: absolute;
+  border-radius: 100%;
+  background: radial-gradient(circle at 0px 0px, rgba(255, 255, 255, 0.5), #a1dafe 70%);
+  opacity: 0.6;
+  height: 50px;
+  width: 50px;
+  -webkit-filter: blur(5px);
+  z-index: 2;
 }
 
-.blueLightCircle:after {
+.blueLight:after {
   width: 50px;
   height: 15px;
   content: "";
   position: absolute;
-  border-radius: 50%;
   background: radial-gradient(circle at 0px 0px, white, white 14%, white 24%);
   -webkit-transform: translateX(-80px) translateY(-90px) skewX(-20deg);
   -moz-transform: skewX(-20deg);
@@ -104,98 +113,18 @@ button {
   -webkit-filter: blur(10px);
 }
 
-.redLight {
-  background: radial-gradient(circle at 0px 0px, #f56981, #9e061f);
-  border-radius: 50%;
-  width: 15px;
-  height: 15px;
-  margin-left: 15px;
-  border: solid 2px black;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.redLight:before {
-    content: "";
-    position: absolute;
-    background: radial-gradient(circle at 0px 0px, rgba(255, 255, 255, 0.5), #f56981 70%);
-    border-radius: 50%;
-    opacity: 0.6;
-    height: 10px;
-    width: 10px;
-    -webkit-filter: blur(5px);
-    z-index: 2;
-}
-
-.redLight:after {
-  width: 10px;
-  height: 10px;
-  content: "";
-  position: absolute;
-  border-radius: 50%;
-  background: radial-gradient(circle at 0px 0px, white, white 30%, #f4637c 60%);
-  -webkit-transform: translateX(-80px) translateY(-90px) skewX(-20deg);
-  -moz-transform: skewX(-20deg);
-  -ms-transform: skewX(-20deg);
-  -o-transform: skewX(-20deg);
-  transform: skewX(-20deg);
-  -webkit-filter: blur(2px);
-}
-
-.yellowLight {
-  background: radial-gradient(circle at 0px 0px, #feef8d, #a28e0f);
-  border-radius: 50%;
+.topContainer > .light {
   width: 15px;
   height: 15px;
   margin-left: 5px;
-  border: solid 2px black;
   display: inline-block;
   vertical-align: top;
 }
 
-.yellowLight:before {
-    content: "";
-    position: absolute;
-    background: radial-gradient(circle at 0px 0px, rgba(255, 255, 255, 0.5), #feef8d 70%);
-    border-radius: 50%;
-    opacity: 0.6;
-    height: 10px;
-    width: 10px;
-    -webkit-filter: blur(5px);
-    z-index: 2;
-}
-
-.yellowLight:after {
-  width: 10px;
-  height: 10px;
+.topContainer > .light:before {
   content: "";
   position: absolute;
-  border-radius: 50%;
-  background: radial-gradient(circle at 0px 0px, white, white 30%, #feef8d 60%);
-  -webkit-transform: translateX(-80px) translateY(-90px) skewX(-20deg);
-  -moz-transform: skewX(-20deg);
-  -ms-transform: skewX(-20deg);
-  -o-transform: skewX(-20deg);
-  transform: skewX(-20deg);
-  -webkit-filter: blur(2px);
-}
-
-.greenLight {
-  background: radial-gradient(circle at 0px 0px, #8dc395, #316c3a);
-  border-radius: 50%;
-  width: 15px;
-  height: 15px;
-  margin-left: 5px;
-  border: solid 2px black;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.greenLight:before {
-  content: "";
-  position: absolute;
-  background: radial-gradient(circle at 0px 0px, rgba(255, 255, 255, 0.5), #8dc395 70%);
-  border-radius: 50%;
+  border-radius: 100%;
   opacity: 0.6;
   height: 10px;
   width: 10px;
@@ -203,19 +132,55 @@ button {
   z-index: 2;
 }
 
-.greenLight:after {
+.topContainer > .light:after {
   width: 10px;
   height: 10px;
   content: "";
   position: absolute;
-  border-radius: 50%;
-  background: radial-gradient(circle at 0px 0px, white, white 30%, #8dc395 60%);
   -webkit-transform: translateX(-80px) translateY(-90px) skewX(-20deg);
   -moz-transform: skewX(-20deg);
   -ms-transform: skewX(-20deg);
   -o-transform: skewX(-20deg);
   transform: skewX(-20deg);
   -webkit-filter: blur(2px);
+}
+
+.redLight {
+  background: radial-gradient(circle at 0px 0px, #f56981, #9e061f);
+}
+
+.redLight:before {
+  background: radial-gradient(circle at 0px 0px, rgba(255, 255, 255, 0.5), #f56981 70%);
+}
+
+.redLight:after {
+  background: radial-gradient(circle at 0px 0px, white, white 30%, #f4637c 60%);
+}
+
+.yellowLight {
+  background: radial-gradient(circle at 0px 0px, #feef8d, #a28e0f);
+  /* margin-left: 5px; */
+}
+
+.yellowLight:before {
+  background: radial-gradient(circle at 0px 0px, rgba(255, 255, 255, 0.5), #feef8d 70%);
+}
+
+.yellowLight:after {
+  background: radial-gradient(circle at 0px 0px, white, white 30%, #feef8d 60%);
+}
+
+.greenLight {
+  background: radial-gradient(circle at 0px 0px, #8dc395, #316c3a);
+  margin-left: 5px;
+}
+
+.greenLight:before {
+  background: radial-gradient(circle at 0px 0px, rgba(255, 255, 255, 0.5), #8dc395 70%);
+}
+
+.greenLight:after {
+  background: radial-gradient(circle at 0px 0px, white, white 30%, #8dc395 60%);
 }
 
 #imgDisplay {
@@ -231,7 +196,6 @@ button {
   height: 100%;
   border-radius: 10px 10px 10px 50px;
   padding: 40px 30px;
-  border: 2px solid black;
 }
 
 #imgDisplay .topLights {
@@ -243,19 +207,15 @@ button {
 
 #imgDisplay .topLights > .light {
   background: radial-gradient(circle at 0px 0px, #ff6881, #bd0323);
-  border-radius: 50%;
   width: 7px;
   height: 7px;
-  border: solid 2px black;
   margin: 5px;
 }
 
 /* .pokemonDisplayRedLight2 {
   background: radial-gradient(circle at 0px 0px, #ff6881, #bd0323);
-  border-radius: 50%;
   width: 7px;
   height: 7px;
-  border: solid 2px black;
   display: inline-block;
   margin-top: -25px;
   margin-left: 11%;
@@ -264,10 +224,8 @@ button {
 
 #imgDisplay .big {
   background: radial-gradient(circle at 0px 0px, #ff6881, #bd0323);
-  border-radius: 50%;
   width: 15px;
   height: 15px;
-  border: solid 2px black;
   display: inline-block;
   margin-top: 8px;
 }
@@ -276,10 +234,6 @@ button {
   background: #232323;
   border-radius: 5%;
   height: 100%;
-  border: 2px solid black;
-  -moz-box-shadow:    inset 0 0 20px #aaaaaa;
-  -webkit-box-shadow: inset 0 0 20px #aaaaaa;
-  box-shadow:         inset 0 0 20px #aaaaaa;
   font-family: 'VT323', monospace;
   text-align: center;
 }
@@ -311,7 +265,6 @@ button {
   width: 40px;
   height: 40px;
   background: radial-gradient(circle at 0px 0px, #00312b, #000);
-  border-radius: 50%;
   position: relative;
   z-index: 0;
   display: inline-block;
@@ -322,7 +275,7 @@ button {
   content: "";
   position: absolute;
   background: radial-gradient(circle at 22px 29px, #00312b, #00312b 50%);
-  border-radius: 50%;
+  border-radius: 100%;
   opacity: 0.6;
   height: 35px;
   width: 34px;
@@ -330,27 +283,26 @@ button {
   margin-top: 1px;
 }
 
-.redButton {
-  width: 13%;
-  height: 5px;
+.red {
   background: #f30029;
-  border-radius: 34%;
-  border: 2px solid black;
-  display: inline-block;
-  vertical-align: top;
-  margin-right: 20px;
   box-shadow: 1px 3px 1px #5c0010
 }
 
-.blueButton {
+.blue {
+  background: #0d5075;
+  box-shadow: 1px 3px 1px #062637;
+}
+
+.narrowButton {
   width: 13%;
   height: 5px;
-  background: #0d5075;
   border-radius: 34%;
-  border: 2px solid black;
   display: inline-block;
   vertical-align: top;
-  box-shadow: 1px 3px 1px #062637;
+}
+
+.redButton {
+  margin-right: 20px;
 }
 
 .nameDisplay {
@@ -362,7 +314,6 @@ button {
   height: 70px;
   padding: 5px;
   background: #51ae5f;
-  border: 2px solid black;
   border-radius: 10%;
   margin-left: 19%;
   margin-top: -15px;
@@ -419,8 +370,6 @@ button {
 
 #hinge > .middle {
   width: 35px;
-  background: rgb(220,10,45);
-  background: linear-gradient(90deg, rgba(220,10,45,1) 0%, rgba(233,102,124,1) 17%, rgba(220,10,45,1) 35%, rgba(137,6,28,1) 68%);
   border-top: 3px solid #49030f;
   border-radius: 15px;
   display: inline-block;
@@ -442,15 +391,13 @@ button {
 #hinge > .bottom2 {
   width: 35px;
   background: #89061c;
-  border-radius: 50%;
   display: inline-block;
   height: 4%;
   margin-top: -70%;
-  border-top: 3px solid #49030f;
+  border-width: 3px 1px 1px 1px;
+  border-style: solid;
+  border-color: #49030f;
   position: absolute;
-  border-bottom: 1px solid #49030f;
-  border-left: 1px solid #49030f;
-  border-right: 1px solid #49030f;
 }
 
 #right {
@@ -482,10 +429,6 @@ button {
   background: #232323;
   padding: 15px;
   border-radius: 10px;
-  border: 2px solid black;
-  -moz-box-shadow:    inset 0 0 15px #aaaaaa;
-  -webkit-box-shadow: inset 0 0 15px #aaaaaa;
-  box-shadow:         inset 0 0 15px #aaaaaa;
 }
 
 #numbers {
@@ -524,7 +467,6 @@ button {
   content: "";
   position: absolute;
   background: radial-gradient(circle at 0px 0px, rgba(255, 255, 234, 0.5), #a1dafe 70%);
-  border-radius: 50%;
   opacity: 0.6;
   height: 20px;
   width: 30px;
@@ -544,7 +486,6 @@ button {
   border-radius: 10px;
   background: #418e4d;
   height: 10px;
-  border: 2px solid black;
   display: inline-block;
   margin-right: 5px;
   box-shadow: 2px 3px 5px black;
@@ -560,7 +501,6 @@ button {
   border-radius: 10px;
   background: radial-gradient(circle at 0px 0px, #cc0a2a, #a20620);
   height: 10px;
-  border: 2px solid black;
   display: inline-block;
   box-shadow: 2px 3px 5px black;
 }
@@ -590,9 +530,7 @@ button {
   width: 25px;
   height: 25px;
   background: radial-gradient(circle at 5px 5px, #fef19b, #a08c0f);
-  border-radius: 50%;
   margin: -15px 30px;
-  border: 2px solid black;
 }
 
 #typeDisplay {
@@ -618,8 +556,4 @@ button {
   background: #232323;
   padding: 5px;
   border-radius: 10px;
-  border: 2px solid black;
-  -moz-box-shadow: inset 0 0 5px #aaaaaa;
-  -webkit-box-shadow: inset 0 0 5px #aaaaaa;
-  box-shadow: inset 0 0 5px #aaaaaa;
 }
